--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -1,8 +1,9 @@
 /***************************************/
 /*          Widgets                    */
 /***************************************/
-/*   switch    */
-/*-------------*/
+/*----------------------------------------------------------------------------------*/
+/*   switch                                                                         */
+/*----------------------------------------------------------------------------------*/
 span.switch{
 	display: inline-block;
 	padding-top: 10px;
@@ -30,8 +31,9 @@ span.switch{
 		font-size: 80% !important;
 	}
 }
-/*    dimmer   */
-/*-------------*/
+/*----------------------------------------------------------------------------------*/
+/* dimmer                                                                           */
+/*----------------------------------------------------------------------------------*/
 span.dimmer{
 	display: inline-block;
 	padding-top: 10px;
@@ -59,9 +61,9 @@ span.dimmer{
 		font-size: 80% !important;
 	}
 }
-
-/* shade-control */
-/*---------------*/
+/*----------------------------------------------------------------------------------*/
+/* shade-control                                                                    */
+/*----------------------------------------------------------------------------------*/
 span.shading{
 	display: inline-block;
 	position: relative;
@@ -107,17 +109,17 @@ span.shading{
 		font-size: 80% !important;
 	}
 }
-
-/*    button   */
-/*-------------*/
+/*----------------------------------------------------------------------------------*/
+/* button                                                                           */
+/*----------------------------------------------------------------------------------*/
 /*
 a.ui-mini span{
 	width: 100px;
 }
 */
-
-/*       alarm         */
-/*---------------------*/
+/*----------------------------------------------------------------------------------*/
+/* alarm                                                                            */
+/*----------------------------------------------------------------------------------*/
 div.alarm a.delete img{
 	float: right;
 	margin-top: 20px;
@@ -165,8 +167,31 @@ div.alarm{
 		padding-right: 1px !important;
 	} 
 }
-/*     setpoint        */
-/*---------------------*/
+/*----------------------------------------------------------------------------------*/
+/* alarm action                                                                     */
+/*----------------------------------------------------------------------------------*/
+div.alarm_action a.delete img{
+	float: right;
+	margin-top: 20px;
+	height: 30px;
+}
+div.alarm_action{
+	position: relative;
+	margin-bottom: 20px;
+	margin-top: 10px;
+}
+.alarm_action input[data-column="name"] {
+	display: inline-block !important;
+	width: 200px !important;
+}
+.alarm_action input[data-column="sectionid"] {
+	display: inline-block !important;
+	width: 100px !important;
+}
+
+/*----------------------------------------------------------------------------------*/
+/*     setpoint                                                                     */
+/*----------------------------------------------------------------------------------*/
 div.setpoint p{
 	display: inline-block;
 	font-size: 150%;
