--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -118,7 +118,7 @@ a.ui-mini span{
 
 /*       alarm         */
 /*---------------------*/
-div.alarm a.delete img{
+a.delete img{
 	float: right;
 	margin-top: 20px;
 	height: 30px;
@@ -165,6 +165,30 @@ div.alarm{
 		padding-right: 1px !important;
 	} 
 }
+/*   alarm-action      */
+/*---------------------*/
+div.alarm_action{
+	position: relative;
+	margin-bottom: 20px;
+	margin-top: 10px;
+}
+.alarm_action>div.ui-input-text{
+	display: inline-block;
+	width: 35%;
+}
+.alarm_action div.alarm_action_action div.ui-input-text{
+	display: inline-block;
+}
+.alarm_action div.alarm_action_action input[data-column*=delay]{
+	width: 3.5em;
+}
+.alarm_action div.alarm_action_action input[data-column*='item']{
+	width: 20em;
+}
+.alarm_action div.alarm_action_action input[data-column*='value']{
+	width: 5em;
+}
+
 /*     setpoint        */
 /*---------------------*/
 div.setpoint p{
