--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -19,6 +19,14 @@ body{
 	width: 50px;
 	height: 50px;
 }
+#menu_button{
+	float: right;
+}
+@media all and (min-width: 800px) {
+	#menu_button{
+		visibility: hidden;
+	}
+}
 
 /***************************************/
 /*           Content                   */
