added popup on request to check if it has been sent

--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -169,3 +169,11 @@ article section div.twocols{
 article hr{
 	width: 90%;
 }
+
+
+/***************************************/
+/*           Popup                   */
+/***************************************/
+#requestpopup{
+	bottom: 20px;
+}
