--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -1,40 +1,62 @@
-/***************************************/
-/*          Widgets                    */
-/***************************************/
-/*----------------------------------------------------------------------------------*/
-/*   switch                                                                         */
-/*----------------------------------------------------------------------------------*/
-span.switch{
+
+
+
+/*****************************************************************************/
+/*                     Light switch                                          */
+/*****************************************************************************/
+
+div[data-widget="lightswitch"]{
 	display: inline-block;
-	padding-top: 10px;
-	width: 100%;
+	height: 50px;
+	width: 49%;
+	min-width: 200px;
 }
-.switch a>img{
-	width: 50px;
+div[data-widget="lightswitch"] img{
 	height: 50px;
 	vertical-align: middle;
-	margin-right: 10px;
 }
-.switch a>div{
-	margin-top: 15px;
-	margin-bottom: 15px;
-	margin-left: 70px;
+div[data-widget="lightswitch"] a{
+	text-decoration: none;
+	color: #FFF;
 }
-.switch a{
-	color: #ffffff !important;
-	font-size: 100% !important;
-	font-weight: bold !important;
+div[data-widget="lightswitch"] a:hover {
+	color: #FFF;
 }
-/* Small screen variation */
-@media all and (max-width: 800px) {
-	.switch a{
-		font-size: 80% !important;
-	}
+
+/*****************************************************************************/
+/*                     Light dimmer                                          */
+/*****************************************************************************/
+div[data-widget="lightdimmer"]{
+	display: inline-block;
+	position: relative;
+	height: 65px;
+	width: 90%;
+}
+div[data-widget="lightdimmer"] img{
+	height: 50px;
+	vertical-align: middle;
+}
+div[data-widget="lightdimmer"] p{
+	position: absolute;
+	margin-left: 50px;
+	margin-top: 2px;
+	font-weight: 700;
+}
+div[data-widget="lightdimmer"] .ui-slider{
+	position: absolute;
+	top: 18px;
+	width: 100%;
+}
+div[data-widget="lightdimmer"] .ui-slider input{
+	visibility: hidden;
+}
+div[data-widget="lightdimmer"] .ui-slider-track{
 }
 
 /*----------------------------------------------------------------------------------*/
 /* dimmer                                                                           */
 /*----------------------------------------------------------------------------------*/
+/*
 span.dimmer{
 	display: inline-block;
 	padding-top: 10px;
@@ -57,6 +79,7 @@ span.dimmer{
 	display : none !important;
 }
 /* Small screen variation */
+/*
 @media all and (max-width: 800px) {
 	.dimmer p{
 		font-size: 80% !important;
@@ -66,6 +89,7 @@ span.dimmer{
 /*----------------------------------------------------------------------------------*/
 /* shade-control                                                                    */
 /*----------------------------------------------------------------------------------*/
+/*
 span.shading{
 	display: inline-block;
 	position: relative;
@@ -106,6 +130,7 @@ span.shading{
 	display: none !important;
 }
 /* Small screen variation */
+/*
 @media all and (max-width: 800px) {
 	.shading p{
 		font-size: 80% !important;
@@ -124,7 +149,7 @@ a.ui-mini span{
 /*----------------------------------------------------------------------------------*/
 /* alarm                                                                            */
 /*----------------------------------------------------------------------------------*/
-
+/*
 a.delete img{
 	float: right;
 	margin-top: 20px;
@@ -224,7 +249,7 @@ div.alarm{
 /*----------------------------------------------------------------------------------*/
 
 
-
+/*
 div.alarm_action{
 	position: relative;
 	margin-bottom: 20px;
@@ -250,6 +275,7 @@ div.alarm_action{
 /*----------------------------------------------------------------------------------*/
 /*     setpoint                                                                     */
 /*----------------------------------------------------------------------------------*/
+/*
 div.setpoint p{
 	display: inline-block;
 	font-size: 150%;
@@ -318,6 +344,7 @@ div.setpoint_chart{
 /*----------------------------------------------------------------------------------*/
 /*     Weather forecast                                                             */
 /*----------------------------------------------------------------------------------*/
+/*
 #weather_forecast_detailed{
 	width: 95%;
 	margin-left: auto;
@@ -364,6 +391,7 @@ div.setpoint_chart{
 
 /*        clock        */
 /*---------------------*/
+/*
 section.clock{
 	width: 90%;
 	margin-top: 20px;
@@ -400,6 +428,7 @@ section.clock{
 
 /*        weather        */
 /*---------------------*/
+/*
 section.lokaal_weer{
 	width: 90%;
 	margin-top: 20px;
@@ -413,6 +442,7 @@ section.lokaal_weer div{
 
 /*        charts       */
 /*---------------------*/
+/*
 div.chart{
 	width: 100%;
 	height: 300px;
@@ -423,6 +453,7 @@ div.chart{
 /*----------------------------------------------------------------------------------*/
 /*     setpoint                                                                     */
 /*----------------------------------------------------------------------------------*/
+/*
 div.measurements_define div.ui-input-text{
 	display: inline-block;
 	height: 30px;
