--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -1,4 +1,10 @@
-
+/*
+// 
+// view.js is part of KNXControl
+// @author: Brecht Baeten
+// @license: GNU GENERAL PUBLIC LICENSE
+// 
+//
 
 
 /*****************************************************************************/
@@ -33,12 +39,13 @@ div[data-widget="lightdimmer"]{
 	width: 90%;
 }
 div[data-widget="lightdimmer"] img{
+	position: absolute;
 	height: 50px;
-	vertical-align: middle;
+	top: 10px;
 }
 div[data-widget="lightdimmer"] p{
 	position: absolute;
-	margin-left: 50px;
+	margin-left: 54px;
 	margin-top: 2px;
 	font-weight: 700;
 }
@@ -50,101 +57,72 @@ div[data-widget="lightdimmer"] .ui-slider{
 div[data-widget="lightdimmer"] .ui-slider input{
 	visibility: hidden;
 }
-div[data-widget="lightdimmer"] .ui-slider-track{
-}
 
-/*----------------------------------------------------------------------------------*/
-/* dimmer                                                                           */
-/*----------------------------------------------------------------------------------*/
-/*
-span.dimmer{
-	display: inline-block;
-	padding-top: 10px;
-	width: 100%;
-}
-.dimmer>span.switch{
-	float: left;
-	width: 60px;
-	padding-top: 2px;
-}
-.dimmer>p{
-	margin-top: 2px;
-	margin-bottom: 4px;
-	font-weight: bold !important;
-}
-.dimmer .ui-slider{
-	margin-top: 2px;
-}
-.dimmer input.ui-slider-input {
-	display : none !important;
-}
-/* Small screen variation */
-/*
-@media all and (max-width: 800px) {
-	.dimmer p{
-		font-size: 80% !important;
-	}
-}
 
-/*----------------------------------------------------------------------------------*/
-/* shade-control                                                                    */
-/*----------------------------------------------------------------------------------*/
-/*
-span.shading{
+
+/*****************************************************************************/
+/*                     Shading                                               */
+/*****************************************************************************/
+div[data-widget="shading"]{
 	display: inline-block;
 	position: relative;
-	padding-top: 10px;
-	width: 100%;
+	height: 65px;
+	width: 98%;
 }
-.shading p{
-	font-weight: bold !important;
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 5px;
-	margin-bottom: 5px;
-}
-.shading>a>img {
-	width: 50px;
+div[data-widget="shading"] img{
+	position: absolute;
+	top: 12px;
 	height: 50px;
 }
-.shading>a{
+div[data-widget="shading"] img.left{
+	left: 0;
+}
+div[data-widget="shading"] img.right{
+	right: 0;
+}
+div[data-widget="shading"] p{
 	position: absolute;
-	top: 25px;
-}
-.shading>a.left{
-	left: 0px;
-}
-.shading>a.right{
-	right: 0px;
-}
-.shading .ui-slider{
+	margin-left: 54px;
 	margin-top: 2px;
-	margin-left: 60px;
-	margin-right: 60px;
+	font-weight: 700;
 }
-.shading .ui-slider-track{
-	margin-left: 15px;
+div[data-widget="shading"] .ui-slider{
+	position: absolute;
+	top: 18px;
+	width: 90%;
 }
-.shading input.ui-slider-input {
-	display: none !important;
-}
-/* Small screen variation */
-/*
-@media all and (max-width: 800px) {
-	.shading p{
-		font-size: 80% !important;
-	}
+div[data-widget="shading"] .ui-slider input{
+	visibility: hidden;
 }
 
-/*----------------------------------------------------------------------------------*/
-/* button                                                                           */
-/*----------------------------------------------------------------------------------*/
-/*
-a.ui-mini span{
-	width: 100px;
-}
-*/
+
+
+/*****************************************************************************/
+/*                     Alarm                                                 */
+/*****************************************************************************/
+
+
+
+
+
+
+
+/*****************************************************************************/
+/*                     Alarm action                                          */
+/*****************************************************************************/
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*----------------------------------------------------------------------------------*/
 /* alarm                                                                            */
