--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -84,7 +84,7 @@
 	position: absolute;
 	top: 10px;
 	right: 10px;
-	font-size: 1.2em;
+	font-weight: 600;
 }
 .ui-content div.group{
 	margin-bottom: 10px;
