--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -175,6 +175,47 @@ div[data-role="action_list"] div.action div{
 }
 
 /*****************************************************************************/
+/*                     Measurement list                                      */
+/*****************************************************************************/
+div[data-role="measurement_list"] div.measurement{
+	position: relative;
+	margin: 0;
+}
+div[data-role="measurement_list"] a.delete{
+	position: absolute; 
+	top: 0;
+	right: 0;
+	margin: 1px;
+}
+div[data-role="measurement_list"] a.edit{
+	position: absolute; 
+	top: 0;
+	right: 50px;
+	margin: 1px;
+}
+div[data-role="measurement_list"] div.measurement div.id{
+	display: inline-block;
+	padding: 6px;
+	width: 5%;
+}
+div[data-role="measurement_list"] div.measurement div.name{
+	display: inline-block;
+	font-weight: 600;
+	padding: 6px;
+	width: 60%;
+	border-bottom: 1px solid #222;
+}
+
+/* action definition popup */
+#measurement_def_popup-popup{
+	width: 90%;
+}
+#measurement_def_popup .ui-field-contain{
+	border: 0;
+}
+
+
+/*****************************************************************************/
 /*                     Clock                                                 */
 /*****************************************************************************/
 
@@ -226,131 +267,9 @@ div[data-role="current_weather"] img{
 }
 
 
-/*----------------------------------------------------------------------------------*/
-/* alarm                                                                            */
-/*----------------------------------------------------------------------------------*/
-/*
-a.delete img{
-	float: right;
-	margin-top: 20px;
-	height: 30px;
-}
-div.alarm{
-	position: relative;
-	margin-bottom: 20px;
-	margin-top: 10px;
-}
-.alarm div.ui-input-text {
-	width: 170px;
-	float: left;
-}
-.alarm input[type="time"]{
-	font-size: 280%;
-	padding: 0 !important;
-}
-.alarm h1{
-	float: left;
-	margin-top: 15px;
-	margin-left: 5px;
-}
-.alarm div.days{
-	clear: both;
-}
-@media all and (max-width: 600px) {
-	.alarm div.ui-input-text{
-		width: 150px;
-	}
-	.alarm input[type="time"]{
-		font-size: 200%;
-	}
-	.alarm h1{
-		margin-top: 5px;
-	}
-	.alarm  div.ui-controlgroup-controls{
-		width: 100% !important;
-	}
-	.alarm  div.ui-controlgroup div.ui-checkbox{
-		width:14% !important;
-	}
-	.alarm  div.ui-controlgroup span.ui-btn-inner{
-		padding-left: 1px !important;
-		padding-right: 1px !important;
-	} 
-}
-	float: right;
-	margin-top: 20px;
-	height: 30px;
-}
-div.alarm{
-	position: relative;
-	margin-bottom: 20px;
-	margin-top: 10px;
-}
-.alarm div.ui-input-text {
-	width: 170px;
-	float: left;
-}
-.alarm input[type="time"]{
-	font-size: 280%;
-	padding: 0 !important;
-}
-.alarm h1{
-	float: left;
-	margin-top: 15px;
-	margin-left: 5px;
-}
-.alarm div.days{
-	clear: both;
-}
-@media all and (max-width: 600px) {
-	.alarm div.ui-input-text{
-		width: 150px;
-	}
-	.alarm input[type="time"]{
-		font-size: 200%;
-	}
-	.alarm h1{
-		margin-top: 5px;
-	}
-	.alarm  div.ui-controlgroup-controls{
-		width: 100% !important;
-	}
-	.alarm  div.ui-controlgroup div.ui-checkbox{
-		width:14% !important;
-	}
-	.alarm  div.ui-controlgroup span.ui-btn-inner{
-		padding-left: 1px !important;
-		padding-right: 1px !important;
-	} 
-}
-
-/*----------------------------------------------------------------------------------*/
-/* alarm action                                                                     */
-/*----------------------------------------------------------------------------------*/
 
 
-/*
-div.alarm_action{
-	position: relative;
-	margin-bottom: 20px;
-	margin-top: 10px;
-}
-.alarm_action>div.ui-input-text{
-	display: inline-block;
-	width: 35%;
-}
-.alarm_action div.alarm_action_action div.ui-input-text{
-	display: inline-block;
-}
-.alarm_action div.alarm_action_action input[data-column*=delay]{
-	width: 3.5em;
-}
-.alarm_action div.alarm_action_action input[data-column*='item']{
-	width: 20em;
-}
-.alarm_action div.alarm_action_action input[data-column*='value']{
-	width: 5em;
-}
+
 
 /*----------------------------------------------------------------------------------*/
 /*     setpoint                                                                     */
