extra buttons in header are hidden on small screens

--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -24,6 +24,13 @@
 		visibility: hidden;
 	}
 }
+@media all and (max-width: 600px) {
+	#header .hide{
+		visibility: hidden;
+		width: 0;
+	}
+}
+
 
 /*****************************************************************************/
 /*                     Main menu                                             */
