--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -25,7 +25,7 @@
 	}
 }
 @media all and (max-width: 500px) {
-	#header .hide{
+	#header .hide img{
 		visibility: hidden;
 		width: 0;
 	}
@@ -33,36 +33,46 @@
 
 
 /*****************************************************************************/
-/*                     Main menu                                             */
+/*                     Menu panels                                           */
 /*****************************************************************************/
-#menu .ui-panel-inner {
+.ui-panel{
+	width: 300px;
+	max-width: 100%;
+}
+.menupanel .ui-panel-inner {
     padding-top: 60px;
 }
-#menu nav{
+.menupanel nav{
     margin:0;
 }
-#menu nav li a{
+.menupanel nav li a{
 	height: 60px;
 	padding-top: 0;
 	padding-bottom: 0;
 }
-#menu nav li a img{
+.menupanel nav li a img{
 	height: 100%;
 }
-#menu nav li h1{
+.menupanel nav li h1{
+	margin-top: 20px;
+}
+.menupanel section>div>a{
 	margin-top: 20px;
 }
 @media all and (min-width: 800px){
-	#menu.ui-panel{
+	.ui-panel{
 		position: relative;
 		width: 38%;
 		visibility: visible;
 		-webkit-backface-visibility: visible;
-		-ms-transform: none;
-		-webkit-transform: none;
-		transform: none;
+		-ms-transform: none !important;
+		-webkit-transform: none !important;
+		transform: none !important;
 	}
 }
+
+
+
 
 /*****************************************************************************/
 /*                     Popup                                                 */
@@ -105,55 +115,3 @@
 		width: 58%;
 	}
 }
-
-
-
-
-
-
-
-/***************************************/
-/*           Article                   */
-/***************************************/
-/*
-
-article{
-	position: relative;
-	display: block;
-	width: 100%;
-}
-
-
-
-article>header>img{
-	position: relative;
-	width: 60px;
-	height: 60px;
-	vertical-align: middle;
-	margin-left: 15px;
-	margin-top: 0px;
-}
-article>header>h1{
-	display: inline-block;
-	margin-top: 20px;
-	margin-bottom: 15px;
-	margin-left: 10px;
-}
-article>header>div{
-	position: relative;
-	float: right;
-	vertical-align: middle;
-	margin-right: 100px;
-	margin-top: 20px;
-	font-weight: bold;
-}
-article>section.ui-collapsible,article>section.ui-collapsible-set{
-	width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-}
-article hr{
-	width: 90%;
-}
-
-*/
