--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -79,6 +79,16 @@
 	margin-left: -16px;
 	margin-right: -16px;
 }
+#rendermenu section li.devider{
+	height: 40px;
+}
+#rendermenu section li.devider a{
+	height: 40px;
+}
+#rendermenu section li.devider h1{
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
 #rendermenu a.add_page{
 	margin-left: 16px;
 	margin-right: 16px;
