--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -53,7 +53,7 @@ div[data-role="lightswitch"] a:hover {
 #pagebuilder div[data-role="lightswitch"]{
 	margin-bottom: 5px;
 	margin-right: 1%;
-	width: 45%;
+	width: 48%;
 	border: solid 1px #222;
 }
 #pagebuilder div[data-role="lightswitch"] a.edit_widget{
@@ -285,6 +285,7 @@ div[data-role="measurement_list"] div.measurement div.name{
 /*****************************************************************************/
 
 div[data-role="clock"] {
+	position: relative;
 	width: 98%;
 	margin-left: auto;
 	margin-right: auto;
@@ -316,6 +317,10 @@ div[data-role="clock"]  hr{
 div[data-role="clock"] .date{
 	margin-top: 0;
 	margin-bottom: 0;
+}
+#pagebuilder div[data-role="clock"] a.edit_widget{
+    top: -5px;
+	right: -5px;
 }
 
 /*****************************************************************************/
