--- a/visualisation/css/widget.css
+++ b/visualisation/css/widget.css
@@ -13,18 +13,15 @@ a.edit_widget{
 	position: absolute;
 	margin: 0;
 }
-a.edit_section{
-	/*position: relative;
-	margin: 0;*/
+a.edit_page_section{
+	position: absolute;
+	margin: 0;
+	top: -10px;
+	left: -10px;
 }
 a.edit_page{
 	position: absolute;
 	margin: 0;
-}
-span.edit_button{
-	position: absolute;
-	top: -5px;
-	right: -5px;
 }
 
 /*****************************************************************************/
@@ -186,7 +183,10 @@ div[data-role="alarm"] label{
 	padding-left: 8px;
 	padding-right: 8px;
 }
-
+#pagebuilder div[data-role="alarm"]{
+	margin-bottom: 5px;
+	border: solid 1px #222;
+}
 
 
 
@@ -286,7 +286,7 @@ div[data-role="measurement_list"] div.measurement div.name{
 
 div[data-role="clock"] {
 	position: relative;
-	width: 98%;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
@@ -317,6 +317,10 @@ div[data-role="clock"]  hr{
 div[data-role="clock"] .date{
 	margin-top: 0;
 	margin-bottom: 0;
+}
+#pagebuilder div[data-role="clock"]{
+	margin-bottom: 5px;
+	border: solid 1px #222;
 }
 #pagebuilder div[data-role="clock"] a.edit_widget{
     top: -5px;
