added widget move up and down

--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -97,11 +97,21 @@
 	position: relative;
 }
 /*****************************************************************************/
-/*                     Popup                                                 */
+/*                     Popups                                                */
 /*****************************************************************************/
 #requestpopup{
 	bottom: 20px;
 }
+#widget_def_popup div.options{
+	display: inline-block;
+	width: 84%;
+}
+#widget_def_popup div.move{
+	display: inline-block;
+	width: 14%;
+	vertical-align: top;
+}
+
 
 /*****************************************************************************/
 /*                     Content                                               */
