--- a/visualisation/css/layout.css
+++ b/visualisation/css/layout.css
@@ -9,11 +9,15 @@
 	height: 60px;
 	z-index: 1002;
 }
-#header nav{
+#header nav div{
+	display: inline-block;
 }
 #header nav img{
 	width: 50px;
 	height: 50px;
+}
+#pagebuilder_import{
+	display: none;
 }
 #menu_button{
 	position: absolute;
